# azure-aifoundry-trace-sample

./: .env.sample  01_ai_inference_monitor_otel.py  02_ai_inference_custom_opentelemetry.py  03_langchain_azure_ai_model.py  04_langchain_common_model.py  README.md  pyproject.toml
