[project]
name = "azure-aifoundry-trace-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.0.0b8",
    "azure-identity>=1.21.0",
    "langchain-azure-ai[opentelemetry]>=0.1.2",
    "langchain-core>=0.3.49",
    "openinference-instrumentation-langchain>=0.1.37",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[tool.uv.workspace]
members = ["openinference"]
